remove unwanted file

--- a/src/Components/Task/TaskCard/TaskCard.css
+++ b/src/Components/Task/TaskCard/TaskCard.css
@@ -48,7 +48,10 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
-  
+  .task-card-btn a {
+    text-decoration: none;
+    color: white;
+  }
   .task-card-btn:hover {
     background-color: #0056b3;
   }
