--- a/src/Components/Task/AddTask/AddTask.css
+++ b/src/Components/Task/AddTask/AddTask.css
@@ -1,6 +1,7 @@
 .add-task-container {
   max-width: 600px;
-  margin: 0 auto;
+  margin: auto;
+  margin-top: 30px;
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 8px;
